--- a/templates/home.html
+++ b/templates/home.html
@@ -8,7 +8,7 @@
 			<div class="row">
 				<div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
 					<div class="card text-center">
-						<form method="post" action="http://127.0.0.1:5000/">
+						<form method="post" action="{{ url_for('home_view') }}">
 							<div class="card-header">
 								Enter your Codeforces Handle
 							</div>
