--- a/templates/home.html
+++ b/templates/home.html
@@ -65,6 +65,9 @@
 								<div class="card-body">
 									{{ comment }}
 								</div>
+								<div class="card-footer text-muted">
+								    <i class="fas fa-star black-text"></i> the <a class="text-info" href="https://github.com/pirateksh/codeforces-upsolving-helper" target="_blank">repository</a> on Github if this helped you. <i class="fas fa-grin yellow-text"></i>
+								</div>
 							</div>
 						{% endif %}
 					{% else %}
