Enabled Mobile Responsiveness

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>
         {% block title %}Base{% endblock %}
     </title>
@@ -25,7 +28,7 @@
 </head>
 <body class="peach-gradient">
     {% include 'navbar.html' %}
-    <br> <br>
+    
     {% for message in get_flashed_messages() %}
       <div class="flash">{{ message }}</div>
     {% endfor %}
