--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,5 +1,5 @@
 <!--Navbar -->
-<nav class="mb-1 navbar navbar-expand-lg navbar-dark default-color-50">
+<nav class="mb-1 navbar navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand" href="#"><h3><b><span class="text-warning">Codeforces</span> <span class="text-primary">Upsolving</span> <span class="text-danger">Helper</span></b></h3></a>
   <div class="collapse navbar-collapse" id="navbarSupportedContent-4">
     <ul class="navbar-nav ml-auto">
@@ -10,7 +10,7 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-dark" href="https://github.com/pirateksh/codeforces-upsolving-helper" target="_blank">
+        <a class="nav-link text-white" href="https://github.com/pirateksh/codeforces-upsolving-helper" target="_blank">
           <i class="fab fa-github"></i> Github</a>
       </li>
     </ul>
