--- a/templates/home.html
+++ b/templates/home.html
@@ -3,23 +3,48 @@
 	Codeforces Upsolving Helper
 {% endblock %}
 {% block content %}
-<script type="text/javascript">
-	function f(e) {
-		document.getElementById('connecting_info').innerHTML = 'Connecting....';
-		document.getElementById('connected_info').innerHTML = '';
-	}
-</script>
+	<script type="text/javascript">
+		$('.alert').alert()
+		function f(e) {
+			document.getElementById('connecting_info').innerHTML = 'Connecting....';
+			document.getElementById('connected_info').innerHTML = '';
+		}
+	</script>
 	<main>
 		<div class="container">
 			<section class="mx-4 my-3 py-3">
-				<div id="connecting_info" class="alert alert-info flash" role="alert">
-			            Welcome to Codeforces Upsolving Helper.
+
+				<!-- Flashing Messages -->
+				<div id="connecting_info" class="alert alert-info flash alert-dismissible fade show" role="alert">
+			        Welcome to Codeforces Upsolving Helper. Feel free to raise issues / pull requests regarding bugs / improvements.
+			        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+				    	<span aria-hidden="true">&times;</span>
+				  	</button>
 			    </div>
-				{% for message in get_flashed_messages() %}
-			        <div id="connected_info" class="alert alert-success flash" role="alert">
-			            {{ message }} Scroll to see results.
-			        </div>
-			    {% endfor %}
+			    {% with messages = get_flashed_messages(with_categories=true) %}
+					{% if messages %}
+						{% for category, message in messages %}
+							{% if category == 'error' %}
+								<div id="connected_info" class="alert alert-danger flash alert-dismissible fade show" role="alert">
+						            {{ message }}
+						            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+								    	<span aria-hidden="true">&times;</span>
+								  	</button>
+						        </div>
+							{% elif category == 'success' %}
+								<div id="connected_info" class="alert alert-success flash alert-dismissible fade show" role="alert">
+						            {{ message }} Scroll to see results.
+						            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+								    	<span aria-hidden="true">&times;</span>
+								  	</button>
+						        </div>
+							{% endif %}	
+						{% endfor %}
+					{% endif %}
+				{% endwith %}
+				<!-- Flashing Messages -->
+
+				<!-- Form Card -->
 				<div class="card text-center">
 					<form method="post" action="{{ url_for('home_view') }}">
 						<div class="card-header">
@@ -39,6 +64,7 @@
 						</div>
 					</form>
 				</div>
+				<!-- Form Card -->
 
 				<br>
 				{% if status %}
@@ -62,8 +88,8 @@
 										{% if user_info.first_name %} {{ user_info.first_name }} {% endif %}
 										{% if user_info.last_name %} {{ user_info.last_name }} {% endif %}
 									</h4>
-									<h4>{% if user_info.organization %} Organization: {{ user_info.organization }} {% endif %}</h4>
-									<h4>Total Problems attempted(at least once) but unsolved are: {{ total_unsolved }}</h4>
+									<h5>{% if user_info.organization %} Organization: {{ user_info.organization }} {% endif %}</h5>
+									<h5>Total Unsolved Problems: {{ total_unsolved }}</h5>
 									{% if final_dict|length > 0 %}
 										Scroll further down to see unsolved Problems. 
 									{% else %}
@@ -77,15 +103,15 @@
 								<i class="fas fa-star black-text"></i> the <a class="text-info" href="https://github.com/pirateksh/codeforces-upsolving-helper" target="_blank">repository</a> on Github if this helped you. <i class="fas fa-grin yellow-text"></i>
 							</div>
 						</div>
-						{% for key, value in final_dict.items() %}
+						{% for index, problems in final_dict.items() %}
 							<br/>
 							<div class="card text-center">
 								<div class="card-header">
-									{{ key }} (Total: {{ value|length }})
+									{{ index }} (Total: {{ problems|length }})
 								</div>
 								<div class="class-body">
-									{% for problem in value %} 
-										<p><a class="text-danger" href="{{ problem[2] }}" target="_blank">{{ problem[0] }} - {{ problem[1] }}</a></p>
+									{% for problem in problems %} 
+										<p><a class="text-danger" href="{{ problem[2] }}" target="_blank">{{ problem[0] }} - {{ problem[1] }} {% if problem[3] < 10000 %}(Rating: {{ problem[3] }}) {% else %}(unrated){% endif %}</a></p>
 									{% endfor %}
 								</div>
 							</div>
@@ -109,7 +135,7 @@
 							About
 						</div>
 						<div class="card-body">
-							<p class="text-black-50">A web app developed using <a class="text-info" href="https://flask.palletsprojects.com/en/1.1.x/quickstart/#a-minimal-application" target="_blank">Flask</a> that compiles all the Problems on <a class="text-info" href="https://codeforces.com/" target="_blank">Codeforces</a> that you have attempted (submitted at least once) but could not get <span class="text-success">Accepted</span> verdict. For convenience, the problems are segregated by level (i.e. A, B, C and so on). Click on the Problem Name to visit the original problem page on <a class="text-info" href="https://codeforces.com/" target="_blank">Codeforces</a>, solve it, come back here and repeat. Good Luck and High Rating!
+							<p class="text-black-50">A web app developed using <a class="text-info" href="https://flask.palletsprojects.com/en/1.1.x/quickstart/#a-minimal-application" target="_blank">Flask</a> that compiles all the Problems on <a class="text-info" href="https://codeforces.com/" target="_blank">Codeforces</a> that you have attempted (submitted at least once) but could not get <span class="text-success">Accepted</span> verdict. For convenience, the problems are segregated by level (i.e. A, B, C and so on) and in each level they are sorted in increasing order by rating. Click on the Problem Name to visit the original problem page on <a class="text-info" href="https://codeforces.com/" target="_blank">Codeforces</a>, solve it, come back here and repeat. Good Luck and High Rating!
 							</p>
 						</div>
 						<div class="card-footer text-muted">
