--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,8 @@
     <title>
         {% block title %}Base{% endblock %}
     </title>
-
+    <!--Favicon-->
+    <link rel="icon" href="{{ url_for('static', filename='images/favicon.png') }}">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
     <!-- Bootstrap core CSS -->
