--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,6 +1,11 @@
 <!--Navbar -->
 <nav class="mb-1 navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#"><h3><b><span class="text-warning">Codeforces</span> <span class="text-primary">Upsolving</span> <span class="text-danger">Helper</span></b></h3></a>
+  <a class="navbar-brand" href="#">
+    <h3>
+      <img src="{{ url_for('static', filename='images/favicon.png') }}" height="30" class="d-inline-block align-top" alt="mdb logo"> <b> <span class="text-warning">Codeforces</span> <span class="text-primary">Upsolving</span> <span class="text-danger">Helper</span></b>
+    </h3>
+  </a>
+  <!-- <a class="navbar-brand" href="#"></a> -->
   <div class="collapse navbar-collapse" id="navbarSupportedContent-4">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item active">
