--- a/templates/base.html
+++ b/templates/base.html
@@ -24,8 +24,9 @@
     {% include 'navbar.html' %}
     {% block content %}
     {% endblock %}
+    {% include 'footer.html' %}
+    {% include 'scripts.html' %}
     {% block javascript %}
     {% endblock %}
-    {% include 'footer.html' %}
 </body>
 </html>
