--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -5,20 +5,20 @@
       <img src="{{ url_for('static', filename='images/favicon.png') }}" height="30" class="d-inline-block align-top" alt="mdb logo"> <b> <span class="text-warning">Codeforces</span> <span class="text-primary">Upsolving</span> <span class="text-danger">Helper</span></b>
     </h3>
   </a>
-  <!-- <a class="navbar-brand" href="#"></a> -->
   <div class="collapse navbar-collapse" id="navbarSupportedContent-4">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">
+        <button type="button" class="btn btn-dark" data-toggle="modal" data-target="#aboutModal">
           <i class="fas fa-info-circle"></i> About
-          <span class="sr-only">(current)</span>
-        </a>
+        </button>
+        {% include 'modal_about.html' %}
       </li>
       <li class="nav-item">
-        <a class="nav-link text-white" href="https://github.com/pirateksh/codeforces-upsolving-helper" target="_blank">
-          <i class="fab fa-github"></i> Github</a>
+        <button class="btn btn-dark nav-link"><a class="text-white" href="https://github.com/pirateksh/codeforces-upsolving-helper" target="_blank">
+          <i class="fab fa-github"></i> Github</a></button>
       </li>
     </ul>
   </div>
 </nav>
 <!--/.Navbar -->
+
