about section funtional

--- a/templates/modal_about.html
+++ b/templates/modal_about.html
@@ -15,7 +15,7 @@
 
       <!--Card image-->
       <div class="view view-cascade overlay">
-        <img src="https://mdbootstrap.com/img/Photos/Others/men.jpg" class="card-img-top" alt="normal">
+        <img src="{{ url_for('static', filename='images/sharefile_ad.jpg') }}" alt="normal">
         <a>
           <div class="mask rgba-white-slight"></div>
         </a>
@@ -26,7 +26,7 @@
       <div class="card-body card-body-cascade text-center">
         <!--Title-->
         <h4 class="card-title"><strong>Kshitiz Srivastava</strong></h4>
-        <h5>Web developer</h5>
+        <h5>Web developer | Ethereum Developer</h5>
 
         <p class="card-text">I am currently pursuing Bachelor of Technology (B.Tech.) in Computer Science and Engineering (CSE, 2018-2022 Batch) from MNNIT Allahabad, Prayagraj, India.
         </p>
@@ -43,9 +43,6 @@
 
     </div>
     <!--/.Card Regular-->
-      </div>
-      <div class="modal-footer">
-     
       </div>
     </div>
   </div>
