--- a/templates/modal_about.html
+++ b/templates/modal_about.html
@@ -15,7 +15,7 @@
 
       <!--Card image-->
       <div class="view view-cascade overlay">
-        <img src="{{ url_for('static', filename='images/sharefile_ad.jpg') }}" alt="normal">
+        <img src="{{ url_for('static', filename='images/me.jpg') }}" alt="normal">
         <a>
           <div class="mask rgba-white-slight"></div>
         </a>
