--- a/templates/modal_about.html
+++ b/templates/modal_about.html
@@ -4,7 +4,7 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">About</h5>
+        <h5 class="modal-title" id="exampleModalLabel">Developer</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -32,11 +32,12 @@
         </p>
 
         <!--Facebook-->
-        <a type="button" href="" target="_blank" class="btn-floating btn-small btn-fb"><i class="fab fa-facebook-f"></i></a>
+        <a type="button" data-toggle="tooltip" title="Codeforces" href="https://codeforces.com/profile/Pirate_ksh" target="_blank" class="btn-floating btn-small btn-fb waves-effect waves-light"><i class="fas fa-code"></i>
+      </a>
         <!--Twitter-->
-        <a type="button" target="_blank" href="https://www.github.com/pirateksh/" class="btn-floating btn-small btn-tw"><i class="fab fa-github"></i></a>
+        <a type="button" data-toggle="tooltip" title="Github" target="_blank" href="https://www.github.com/pirateksh/" class="btn-floating btn-small btn-tw"><i class="fab fa-github"></i></a>
         <!--Google +-->
-        <a type="button" target="_blank" href="https://www.linkedin.com/in/kshitiz-srivastava-992822171/" class="btn-floating btn-small btn-dribbble"><i class="fab fa-linkedin"></i></a>
+        <a type="button" data-toggle="tooltip" title="Linkedin" target="_blank" href="https://www.linkedin.com/in/kshitiz-srivastava-992822171/" class="btn-floating btn-small btn-dribbble"><i class="fab fa-linkedin"></i></a>
 
       </div>
       <!--/.Card content-->
