--- a/templates/scripts.html
+++ b/templates/scripts.html
@@ -8,6 +8,10 @@
 <!-- Initializations -->
 
 <script type="text/javascript">
+    // Tooltips Initialization
+$(function () {
+$('[data-toggle="tooltip"]').tooltip()
+})
         function fade(element) {
             var op = 1;  // initial opacity
             var timer = setInterval(function () {
