--- a/templates/home.html
+++ b/templates/home.html
@@ -14,6 +14,13 @@
 				    	<span aria-hidden="true">&times;</span>
 				  	</button> -->
 			    </div>
+			    <!-- Flashing Messages -->
+				<div class="alert alert-info flash alert-dismissible fade show" role="alert">
+			        If you witness <a class="alert-link">Internal Server Error</a>, raise an <a target="_blank" href="https://github.com/pirateksh/codeforces-upsolving-helper/issues" class="alert-link">issue</a> on github stating the <b>Codeforces Handle</b> you entered.
+			        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+				    	<span aria-hidden="true">&times;</span>
+				  	</button>
+			    </div>
 			    {% with messages = get_flashed_messages(with_categories=true) %}
 					{% if messages %}
 						{% for category, message in messages %}
@@ -26,7 +33,7 @@
 						        </div>
 							{% elif category == 'success' %}
 								<div id="connected_success" class="alert alert-success flash alert-dismissible fade show" role="alert">
-						            {{ message }} Scroll to see results.
+						            {{ message }}
 						            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
 								    	<span aria-hidden="true">&times;</span>
 								  	</button>
@@ -100,7 +107,7 @@
 							<br/>
 							<div class="card text-center">
 								<div class="card-header">
-									{{ index }} (Total: {{ problems|length }})
+									{% if index == '#' %}Other(s){% else %}{{ index }}{% endif %} (Total: {{ problems|length }})
 								</div>
 								<div class="class-body">
 									{% for problem in problems %} 
